<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CurrentFragment">

    <TextView
        android:id="@+id/current_city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/current_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tuesday_november_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_city_tv" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_date_tv"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/current_conditions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/february_26_1999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableLayout"
        android:layout_width="146dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:stretchColumns="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_conditions_tv">


        <TextView
            android:id="@+id/current_temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            app:layout_constraintBottom_toBottomOf="@+id/current_temp_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/current_temp_tv" />

        <TextView
            android:id="@+id/current_high_temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            app:layout_constraintStart_toStartOf="@+id/current_temperature_tv"
            app:layout_constraintTop_toBottomOf="@+id/current_temperature_tv" />

        <TextView
            android:id="@+id/current_low_temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            app:layout_constraintStart_toStartOf="@+id/current_high_temperature_tv"
            app:layout_constraintTop_toBottomOf="@+id/current_high_temperature_tv" />

        <TextView
            android:id="@+id/current_temp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:accessibilityLiveRegion="none"
            android:gravity="end"
            android:justificationMode="none"
            android:text="@string/_89"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_high_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_69"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_temp_tv" />

        <TextView
            android:id="@+id/current_low_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_420"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_high_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/view_forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/view_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>