<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forecastFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ForecastFragment">

    <TextView
        android:id="@+id/forecastTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_day_forecast_for_chicago"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/daysOfWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/daysOfWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastTitle">

        <ImageView
            android:id="@+id/dayOneImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/dayTwoImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/dayThreeImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/dayFourImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/dayFiveImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

    </TableRow>

    <TableRow
        android:id="@+id/daysOfWeek"
        style="@style/daysOfWeekStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">

        <TextView
            android:id="@+id/dayOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/dayone" />

        <TextView
            android:id="@+id/dayTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/daytwo" />

        <TextView
            android:id="@+id/dayThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/daythree" />

        <TextView
            android:id="@+id/dayFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/dayfour" />

        <TextView
            android:id="@+id/dayFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/dayfive" />
    </TableRow>

    <TableRow
        android:id="@+id/highsAndLows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center"
        android:gravity="center|start|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysOfWeek"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/oneHL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/_69_69" />

        <TextView
            android:id="@+id/twoHL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/_69_69" />

        <TextView
            android:id="@+id/threeHL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/_69_69" />

        <TextView
            android:id="@+id/fourHL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/_69_69" />

        <TextView
            android:id="@+id/fiveHL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/_69_69" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>